cran submission update

--- a/vignettes/FLightR_with_black-tailed_godwit_vignette_from_MEE_2017.Rmd
+++ b/vignettes/FLightR_with_black-tailed_godwit_vignette_from_MEE_2017.Rmd
@@ -12,7 +12,7 @@ vignette: >
 
 # FLightR analysis example of Black tailed godwit geolocator
 _this vignette is supplementary material to_
-**Rakhimberdiev E., Saveliev A., Piersma, T., Karagicheva J. 2017 FLightR: An R package for reconstructing animal paths from solar geolocation loggers. Methods in Ecology and Evolution. [DOI](www.dx.doi.org/10.1111/2041-210X.12765)**
+**Rakhimberdiev E., Saveliev A., Piersma, T., Karagicheva J. 2017 FLightR: An R package for reconstructing animal paths from solar geolocation loggers. Methods in Ecology and Evolution. [DOI](http://www.dx.doi.org/10.1111/2041-210X.12765)**
 
 ## Install package
 Note that we used FLightR 0.4.5 version, and running this example in later versions may provide somehow different results.
