--- a/R/NEWS
+++ b/R/NEWS
@@ -1,4 +1,4 @@
-# what's new
+# what's new - starting from 0.5.4 - updates are in NEWS.md file
 
 # ver 0.0.2. May 15 2013 added median in the plotting function
 # ver 0.1.3 June 7 get.irradiance added
@@ -25,3 +25,4 @@
 # ver 0.5.1 July 2021 fixed minor bug in find times distribution, set time zones to gmt everywhere, replaced cat() with message(), improved documentation, conserved par values throughout the code
 # ver 0.5.2 Jan 2022 Moved GeoLight from Imports to suggests. Corrected significant bug in get_utilisation_points that affected size of the estimated error distributions in plotting and summary functions!!! 
 # ver 0.5.3 Sept 2023 minor change in testhat part to comply with new CRAN checks.
+# ver. 0.5.4 Sept 2023 removed dependencies from sp, maptools, rgeos and rgdal.
